styles.css
/* global code */
:root {
    --white: #fff;
    /* --off-white: #f0e6ef; */
    --black: #000;
}

html {
    scroll-behavior: smooth;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    letter-spacing: 0.5px;
}

/* Navbar */
.navbar {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.5);
    position: sticky;
    top: 0;
}

.navbar ul {
    display: flex;
    list-style: none;
    margin: 20px 0;
}

.navbar ul li {
    /* font-family: ; */
    font-size: 1.1rem;
    font-weight: bold;
}

.navbar ul li a {
    text-decoration: none;
    color: white;
    padding: 8px 25px;
    transition: all .5s ease;
}

.navbar ul li a:hover {
    background-color: var(--white);
    color: var(--black);
    box-shadow: 0 0 10px var(--white);
}

li {
    list-style: none;
}

/* .hire-me {
    text-decoration: none;
    color: white;
} */

/* .hire-me:hover {
    background-color: var(--white);
    color: var(--white); 
    border: none;
    color: var(--black);
    box-shadow: 0 0 10px var(--white);
}  */

/*************************************************************************************************************************************
Home
*************************************************************************************************************************************/

#home {
    display: flex;
    flex-direction: column;
    background-color: rgba(0, 0, 0, 0.5);
    height: 840px;
    justify-content: center;
    align-items: center;
    color: var(--white);
}

#home::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    /* This is for the background image in the video */
    background: url(./images/dunes-gran-canaria.jpeg) no-repeat center center/cover;
    /* background-color: bisque; */
    height: 900px;
    width: 100%;
    z-index: -1;
    opacity: .8;
}

.main {
    display: flex;
    flex-direction: column;
    /* border: 1px solid var(--white); */
    align-items: center;
    position: absolute;
    top: 30%;
    /* right: 10%; */
}

.headings {
    /* font-family: ; */
    font-size: 3rem;
    text-align: center;
    margin: 0 auto;
    margin-bottom: 2rem;
    /* padding-bottom: 20px; */
    /* margin: 40px 0; */
}

.btn {
    padding: 10px 35px;
    font-size: 1em;
    background-color: transparent;
    border: 1px solid --white;
    color: var(--white);
    outline: none;
    transition: .6s ease;
}

.btn:hover {
    cursor: pointer;
    background-color: var(--white);
    color: var(--black);
    box-shadow: 0 0 5px var(--white), 0 0 10px var(--white), 0 0 15px var(--white);
    font-weight: bold;
}

/*************************************************************************************************************************************
About section
*************************************************************************************************************************************/

#about {
    /* border: 2px solid green; */
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    padding: 20px;
    margin-bottom: 50px;
    /* background-color: var(--off-white); */
}

#pic {
    display: flex;
    padding: 30px;
}

#pic img {
    width: 575px;
    height: 400px;
}

#intro {
    /* border: 2px solid red; */
    margin-left: 40px;
    display: flex;
    flex-direction: column;
    text-align: justify;
    padding: 30px;
}

#intro h2 {
    font-weight: 2rem;
    margin-bottom: 30px;
}

/*************************************************************************************************************************************
Portfolio
*************************************************************************************************************************************/

#portfolio {
    display: flex;
    flex-direction: column;
    background-color: #AD8E70;
    /* background-color: rgba(0, 0, 0, 0.9); */
    color: var(--white);
    align-items: center;
    padding: 20px;
}

.gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    box-sizing: border-box;
    padding-top: 40px;
}

.gallery img {
    width: 360px;
    height: 240px;
    margin: 10px;
    object-fit: contain;
}

/*************************************************************************************************************************************
Services
*************************************************************************************************************************************/

#services {
    display: flex;
    flex-direction: column;
    padding: 20px;
}

.row {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    box-sizing: border-box;
    padding-top: 30px;
}

.box {
    display: flex;
    flex-direction: column;
    width: 350px;
    height: 450px;
    border: 1px solid var(--black);
    margin: 10px;
    align-items: center;
    text-align: justify;
    padding: 10px;
    border-radius: 15px;
    /* background: linear-gradient(to top, rgb(255, 45, 45) 50%, white 50%); */
    background: linear-gradient(to top, rgba(93, 46, 46, 0.561) 50%, white 50%);
    background-size: 100% 200%;
    transition: all .8s;
}

.box:hover {
    background-position: left bottom;
    color: var(--white);
    border: none;
    box-shadow: 0 0 20px rgb(81, 46, 46);
    /* box-shadow: 0 0 20px rgb(255, 45, 45); */
}

.stack {
    font-size: 2rem;
    margin-bottom: 1.5rem;
}

.fa-node-js {
    color: #339933;
}
.fa-react {
    color: #61DAFB;
}
.fa-html5 {
    color: #E34F26;
}
.fa-css3 {
    color: #1572B6;
}
.fa-js {
    color: #F7DF1E;
}

/* This was for added img art on the top of each service box */
/* .box img {
    width: 80px;
    height: 80px;
    background-color: var(--white);
    padding: 10px;
} */

/*************************************************************************************************************************************
Contact
*************************************************************************************************************************************/
#contact {
    display: flex;
    flex-direction: column;
    background-color: #AD8E70;
    /* background-color: rgba(0, 0, 0, 0.9); */
    color: var(--white);
    padding: 20px;
}

.form {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 20px 0;
}

.input {
    padding: 12px;
    margin: 15px;
    width: 30%;
    border: none;
    border-radius: 10px;
    outline: none;
}

#msg {
    width: 20%;
    padding: 10px;
    margin: 15px;
    border: none;
    border-radius: 10px;
    outline: none;
}

#send {
    padding: 10px;
    width: 10%;
    margin: 40px;
    border: none;
    border-radius: 10px;
    outline: none;
}

#send:hover {
    cursor: pointer;
    box-shadow: 0 0 10px white;
}

.footer-icons {
    font-size: 2.5rem;
    display: flex;
    /* flex-direction: column; */
    justify-content: center;
    gap: 30px;
    /* align-items: center; */
    /* margin: 5px; */
    color: white;
    list-style: none;
}

.fa-twitter,
.fa-linkedin,
.fa-github {
    color: var(--white);
}

